inscripcion concursante a si mismo, sin terminar

--- a/src/app/concursos/concurso-detail/fotografias.html
+++ b/src/app/concursos/concurso-detail/fotografias.html
@@ -11,22 +11,22 @@
                 <ion-label>Filtrar por:</ion-label>
               </ion-list-header>
 
-              <ion-item>
+              <ion-item lines="none">
                 <ion-label>Nombre</ion-label>
                 <ion-radio slot="start" value="nombre"></ion-radio>
               </ion-item>
 
-              <ion-item>
+              <ion-item lines="none">
                 <ion-label>Código</ion-label>
                 <ion-radio slot="start" value="codigo"></ion-radio>
               </ion-item>
 
-              <ion-item>
+              <ion-item lines="none">
                 <ion-label>Concursante</ion-label>
                 <ion-radio slot="start" value="concursante"></ion-radio>
               </ion-item>
 
-              <ion-item>
+              <ion-item lines="none">
                 <ion-label>Fotoclub/Agrupación</ion-label>
                 <ion-radio slot="start" value="fotoclub"></ion-radio>
               </ion-item>
