--- a/src/app/concursos/concurso-detail/inscribir-concursante/inscribir-concursante.component.html
+++ b/src/app/concursos/concurso-detail/inscribir-concursante/inscribir-concursante.component.html
@@ -25,18 +25,35 @@
           <ion-row>
             <ion-col>
               <ion-row class="ion-padding-top">
-                <ion-item class="w-100 ion-margin-bottom">
+                <ion-item *ngIf="concursantes.length > 1; else unicoElemento" class="w-100 ion-margin-bottom">
                   <!-- [position]="(profile_id != undefined) ? 'stacked' : 'floating'" -->
-                  <ion-label position="floating">Concursante</ion-label>
-                  <ionic-selectable  item-content
-                    [(ngModel)]="profileContest.profile_id"
-                    [items]="concursantes"
-                    itemValueField="id"
-                    itemTextField="name"
-                    [canSearch]="true"
-                    >
-                  </ionic-selectable>
+                  
+
+                    <ion-label position="floating">Concursante</ion-label>
+                    <ionic-selectable  item-content
+                      [(ngModel)]="profileContest.profile_id"
+                      [items]="concursantes"
+                      itemValueField="id"
+                      itemTextField="name"
+                      [canSearch]="true"
+                      >
+                    </ionic-selectable>
+                 
                 </ion-item>
+                <ng-template #unicoElemento 
+                
+                >
+                <!-- <div class="ion-hide"> -->
+<!-- <ion-input 
+[(ngModel)]="pfCts"
+value="{{concursantes[0].id}}" >
+
+</ion-input> -->
+                  {{concursantes[0].name}} {{concursantes[0].last_name}}
+                <!-- </div> -->
+               
+
+                </ng-template>
               </ion-row>
               <ion-row class="ion-padding-top">
                 <ion-item class="w-100 ion-margin-bottom">
