--- a/src/app/concursos/concurso-detail/inscribir-concursante/inscribir-concursante.component.html
+++ b/src/app/concursos/concurso-detail/inscribir-concursante/inscribir-concursante.component.html
@@ -44,15 +44,18 @@
                 
                 >
                 <!-- <div class="ion-hide"> -->
-<!-- <ion-input 
-[(ngModel)]="pfCts"
-value="{{concursantes[0].id}}" >
-
-</ion-input> -->
-                  {{concursantes[0].name}} {{concursantes[0].last_name}}
                 <!-- </div> -->
-               
-
+                <!-- <ion-text color="dark">
+                  {{concursantes[0].name}} {{concursantes[0].last_name}}
+                </ion-text> -->
+                <ion-item class="w-100 ion-margin-bottom">
+                <ion-label position="floating">Concursante</ion-label>
+                <ion-input color="dark"
+                [(ngModel)]="concursantes[0].name"
+                disabled>
+                  
+                </ion-input>
+              </ion-item>
                 </ng-template>
               </ion-row>
               <ion-row class="ion-padding-top">
@@ -82,7 +85,7 @@ value="{{concursantes[0].id}}" >
                       <app-btn-post
                         [posting]="posting"
                         (post)="inscribirConcursante()"
-                        [disabled]="!datosCargados()"
+                        [disabled]="! datosCargados() "
                       ></app-btn-post>
                       <!-- <ion-button
                         expand="block"
