--- a/src/app/usuario/usuarios-abm/usuarios-abm.page.html
+++ b/src/app/usuario/usuarios-abm/usuarios-abm.page.html
@@ -248,7 +248,7 @@
                           class="ion-hide-sm-up ion-justify-content-center"
                         >
                           <ion-buttons>
-                            <ion-button *ngIf="rolificador.esDelegado(userLogged)"
+                            <ion-button *ngIf="rolificador.esDelegado(userLogged) || rolificador.isAdmin(userLogged)"
                               (click)="mostrarAcciones($event, m)"
                             >
                               <!-- <ion-thumbnail></ion-thumbnail> -->
@@ -285,7 +285,7 @@
                       size-md="1"
                       class="ion-align-self-center ion-hide-sm-down"
                     >
-                      <ion-buttons *ngIf="rolificador.esDelegado(userLogged)">
+                      <ion-buttons *ngIf="rolificador.esDelegado(userLogged)  || rolificador.isAdmin(userLogged)">
                         <ion-button [routerLink]="['editar/' + m.user.id]">
                           <ion-icon name="create"></ion-icon>
                         </ion-button>
