btn registrarse, aviso en modal de abm-secciones, fotoclub de formulario de registro sacado para jueces y admin, restriccion y mensaje de tipo de archivo reglament de concurso

--- a/src/app/concursos/concurso-detail/informacion/informacion.component.html
+++ b/src/app/concursos/concurso-detail/informacion/informacion.component.html
@@ -28,7 +28,7 @@
             </ion-row>
           </ion-col>
           <ion-col
-            *ngIf="rolificador.esDelegado(u)"
+            *ngIf="(rolificador.esDelegado(u) || rolificador.isAdmin(u))"
             class="ion-align-self-start"
           >
             <ion-button class="ion-float-right" (click)="deleteConcurso()">
