--- a/src/app/modules/auth/components/login-view/login-view.component.html
+++ b/src/app/modules/auth/components/login-view/login-view.component.html
@@ -27,8 +27,12 @@
                 <ion-item class="expand-full">
                   <ion-col class="ion-no-padding">
                     <ion-row>
-                      <ion-col class="ion-no-padding" size="10">
-                        <ion-label position="stacked">Contraseña</ion-label>
+                      <ion-col class="ion-no-padding" size="12">
+                        <ion-label class="w-100" position="stacked" class="ion-text-wrap">
+                                Contraseña
+                                <!-- TODO: no ocupa el 100% de ancho el label -->
+                                <!-- <a class="ion-float-right">Olvidé mi contraseña</a> -->
+                            </ion-label> 
                         <ion-input
                           #passInput
                           tabindex="0"
@@ -52,7 +56,6 @@
                   </ion-col>
                 </ion-item>
               </div>
-              <!-- color="primary" -->
               <ion-button
                 color="primary"
                 expand="block"
@@ -70,6 +73,14 @@
               <ion-item color="danger" *ngIf="error != undefined">
                 <ion-label>{{ error }}</ion-label>
               </ion-item>
+            </ion-card>
+            <ion-card class="ion-margin-top expand-full ion-text-center">
+              <div class="ion-padding-top ion-padding-bottom ">
+
+                <ion-text >
+                  Nuevo en el sitio? <a href="registrarse">Crea una cuenta</a>
+                </ion-text>
+              </div>
             </ion-card>
           </ion-row>
         </ion-col>
