--- a/src/app/nav/navbar/navbar.component.html
+++ b/src/app/nav/navbar/navbar.component.html
@@ -42,7 +42,8 @@
   </ion-buttons>
 
   <ng-template #login>
-    <ion-button slot="end" [routerLink]="['/login']"> Login </ion-button>
+    <ion-button slot="end" [routerLink]="['/login']"> Ingresar </ion-button>
+    <ion-button slot="end" [routerLink]="['/registrarse']"> Registrarse </ion-button>
   </ng-template>
 
   <ion-buttons slot="end" class="ion-hide-md-up">
