--- a/src/app/concursos/metricas-abm/metricas-post/metricas-post.component.html
+++ b/src/app/concursos/metricas-abm/metricas-post/metricas-post.component.html
@@ -32,10 +32,10 @@
             <ion-col>
               <ion-row>
                 <ion-col>
-                  <ion-chip color="danger">
+                  <!-- <ion-chip color="danger">
                     <ion-icon name="alert-outline"></ion-icon>
                     <ion-label>CUIDADO: la modificación de este elemento repercutirá en concursos que lo utilicen, se recomienda la edición para correcciones ortográficas</ion-label>
-                  </ion-chip>
+                  </ion-chip> -->
                   <form
                     #metricForm="ngForm"
                     (ngSubmit)="post(metricForm)"
@@ -50,7 +50,7 @@
                     </ion-item>
 
                     <ion-item class="w-100">
-                      <ion-label position="floating">Puntage</ion-label>
+                      <ion-label position="floating">Puntaje</ion-label>
                       <ion-input
                         [ngModel]="metric.score"
                         name="score"
