--- a/src/app/concursos/secciones-abm/seccion-post/seccion-post.component.html
+++ b/src/app/concursos/secciones-abm/seccion-post/seccion-post.component.html
@@ -32,7 +32,7 @@
             <ion-col>
               <ion-row>
                 <ion-col>
-                  <ion-chip color="danger">
+                  <ion-chip color="danger" *ngIf="formTitle.includes('Editar')">
                     <ion-icon name="alert-outline"></ion-icon>
                     <ion-label>CUIDADO: la modificación de este elemento repercutirá en concursos que lo utilicen, se recomienda la edición para correcciones ortográficas</ion-label>
                   </ion-chip>
