btn compartir (copia a portapepeles la ruta) en concurso

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <ion-app>
   <ion-header>
-    <app-navbar *ngIf="router.url != '/login'"></app-navbar>
+    <!-- <app-navbar *ngIf="router.url != '/login'"></app-navbar> -->
+    <app-navbar></app-navbar>
   </ion-header>
 
   <ion-content>
