--- a/src/app/concursos/concurso-detail/fotografias/fotografias.component.html
+++ b/src/app/concursos/concurso-detail/fotografias/fotografias.component.html
@@ -301,10 +301,10 @@
                     <ion-col class="ion-hide-md-down" size="2">
                       <!-- <b>Puntaje</b> -->
                       <ion-row>
-                        <app-th-sort
+                        <!-- <app-th-sort
                           [(data)]="resultadosConcurso"
                           title="Puntaje"
-                        ></app-th-sort>
+                        ></app-th-sort> -->
                         <!-- <div class="thead">
                           <b>Puntaje</b>
                           <app-btn-sort 
