--- a/src/app/concursos/concurso-detail/image-review/image-review.page.html
+++ b/src/app/concursos/concurso-detail/image-review/image-review.page.html
@@ -50,14 +50,14 @@
                         required
                       ></ion-input>
                     </ion-item>
-                    <ion-item class="w-100 ion-margin-bottom">
+                    <!-- <ion-item class="w-100 ion-margin-bottom">
                       <ion-label position="floating">Puntaje</ion-label>
                       <ion-input
                         [ngModel]="review.score"
                         name="score"
                         required
                       ></ion-input>
-                    </ion-item>
+                    </ion-item> -->
 
                     <ion-row class="ion-justify-content-end">
                       <ion-col size="12">
