--- a/src/app/concursos/concurso-detail/informacion/informacion.component.html
+++ b/src/app/concursos/concurso-detail/informacion/informacion.component.html
@@ -90,28 +90,29 @@
           </ion-col>
         </ion-row>
 
-        <ion-row class="w-100" *ngIf="! isInscripto && rolificador.esConcursante(u); else btnUnsuscribe">
-        <!-- <ion-row class="w-100" *ngIf="!  ; else btnUnsuscribe"> -->
-        <!-- <ion-row class="w-100"> -->
-          <ion-col class="ion-float-right ion-align-self-end">
-            <ion-button class="ion-float-right" size="small" (click)="inscribirConcursante()"
+        <ion-row class="w-100 ion-justify-content-end">
+          <div >
+            <ion-button  *ngIf="! isInscripto && rolificador.esConcursante(u); else btnUnsuscribe" size="small" (click)="inscribirConcursante()"
               >Inscribirme!</ion-button
             >
-          </ion-col>
+            <ion-button  size="small" 
+            (click)="compartir()"
+              >
+              <ion-icon name="share-social-outline"></ion-icon>
+              </ion-button
+            >
+
+          </div>
+          
         </ion-row>
       </ion-card-content>
 
       <ng-template #btnUnsuscribe >
-        <ion-row *ngIf="rolificador.esConcursante(u)" class="w-100">
-          <ion-col class="ion-float-right ion-align-self-end">
-            <ion-button color="danger" class="ion-float-right" size="small" 
-            (click)="desinscribirme()"
-              >Desinscribirme</ion-button
-            >
-          </ion-col>
-        </ion-row>
-      </ng-template>
-      
+          <ion-button *ngIf="rolificador.esConcursante(u)" color="danger" size="small" 
+          (click)="desinscribirme()"
+            >Desinscribirme</ion-button
+          >
+      </ng-template> 
 
       <!-- <ion-label>{{item}}</ion-label> -->
     </ion-card>
