--- a/src/app/concursos/concursos.page.html
+++ b/src/app/concursos/concursos.page.html
@@ -131,7 +131,7 @@
                 <ion-button
                   [routerLink]="['metricas']"
                   *ngIf="rolificador.esDelegado(u) || rolificador.isAdmin(u)"
-                  >Administrar metricas</ion-button>
+                  >Administrar Puntajes</ion-button>
               </ion-col>
               <ion-col size="2" size-sm="1">
                 <ion-row
