--- a/src/global.scss
+++ b/src/global.scss
@@ -44,7 +44,12 @@
     }
   }  
 }
+
 @media (min-width: 768px) {
+  ion-toast div.toast-wrapper.toast-bottom{
+    margin-right: 0 !important;
+  }
+
   ion-modal.auto-width {
     &.bottom {
       align-items: flex-end;
